  * Bump libwayland-dev build-dep to 1.11.0 per configure.ac.
  * Remove libgcrypt20-dev build-dep per configure.ac.
  * Update watch url.
  * Drop vl-zscan-fix-Fix-trivial-sign-compare-warnings.diff and r600-
    sb-Fix-loop-optimization-related-hangs-on-eg.diff, upstream.
  * Drop workaround-binutils-mips-844357.diff, binutils regression has
    been fixed.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 19 Jan 2017 16:50:33 +0100

mesa (13.0.3-1) unstable; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.

  [ Andreas Boll ]
  * Add vl-zscan-fix-Fix-trivial-sign-compare-warnings.diff: Fixes mpeg2
    decoding on radeon GPUs without native mpeg2 support (Closes:
    #846297).  Thanks to Jörg-Volker Peetz for reporting and tracking
    down this regression!
  * Add r600-sb-Fix-loop-optimization-related-hangs-on-eg.diff: Fixes
    GPU hangs on r600g (Evergreen and Northern Islands GPUs) in many
    games.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 10 Jan 2017 17:38:23 +0200

mesa (13.0.2-3) unstable; urgency=medium

  * Fix typo to correctly disable asm on x32. Should fix FTBFS on x32.
  * Add debian/source/format file.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 15 Dec 2016 16:42:25 +0100

mesa (13.0.2-2) unstable; urgency=medium

  * Bump llvm/libclang build-deps to >= 1:3.9.1.
    - Enables support for OpenCL on AMD Polaris GPUs (Closes: #848173).
  * Cherry-pick 6dc96de (cso: don't release sampler states that are
    bound) from upstream master branch. Fixes random GPU hangs on
    radeonsi (AMD Southern Islands and newer) in many games.
  * Bump debhelper compat to 10.
  * Stop passing --disable-silent-rules to configure, debhelper does
    that for a while.
  * Drop no longer needed dpkg-dev versioned build-dependency.
  * Drop redundant cross-build detection, debhelper does this for us
    already.
  * Disable assembly usage on x32. Related to Bug #758094.
