@@ -9,6 +9,7 @@ mesa (17.0.0~rc1-1) UNRELEASED; urgency=medium
     sb-Fix-loop-optimization-related-hangs-on-eg.diff, upstream.
   * Drop workaround-binutils-mips-844357.diff, binutils regression has
     been fixed.
+  * Rename EGL_DISPLAYS to EGL_PLATFORMS.
 
  -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 19 Jan 2017 16:50:33 +0100
 
